Changed input font size to 16px to prevent auto zoom on mobile Safari

--- a/src/client/components/index/form/style.scss
+++ b/src/client/components/index/form/style.scss
@@ -40,11 +40,11 @@
 @media only screen and (max-width: 600px) {
 
 	.createRoomInput {
-		width: 70%;
+		width: 90%;
 		border-radius: 3px;
 		border: 4px solid $danger-color;
-		padding: 10px;
-		font-size: 10px;
+		padding: 5px;
+		font-size: 16px;
 		box-shadow: 0.5px 0.5px 3px 0.5px #ff8f00;
 		display: inline;
 		margin: 10px auto;
